# GameOfLife

./: CMakeLists.txt
ext/gtest/: CMakeLists.txt
include/: Director.h  Matrix.h
src/: Director.cpp  Matrix.cpp  Matrix.h
tests/: MatrixTest.cpp  test.cpp
